# python-automationclient

./: .gitignore  .testr.conf  1  Architecture.html  CNAME  Command-line_tool.html  Component.html  Device.html  Global_Properties.html  Install.html  LICENSE  Node.html  Overview.html  Overwiev.html  Profile.html  Python_API.html  README.md  README.rst  Reference.html  Zone.html  arch_storage_new.arcd  genindex.html  index.html  node_deploy.json  objects.inv  openstack-common.conf  overview.html  profile_storage_new.json  profile_storage_new_mo.json  reference.html  requirements.txt  role_deploy.json  run_tests.sh  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  update_component_zone_role.json  zone_create.json  (+1 more)
_sources/: Architecture.txt  Command-line_tool.txt  Component.txt  Device.txt  Global_Properties.txt  Install.txt  Profile.txt  Reference.txt  Zone.txt  index.txt  overview.txt  reference.txt
_static/: nature.css
automationclient/: __init__.py  base.py  client.py  exceptions.py  extension.py  service_catalog.py  shell.py  utils.py
automationclient/openstack/common/: gettextutils.py  setup.py  strutils.py  version.py
automationclient/tests/: test_base.py  test_client.py  test_http.py  test_service_catalog.py  test_shell.py  test_utils.py  utils.py
automationclient/v1/: __init__.py  architectures.py  client.py  components.py  devices.py  node.py  nodes.py  profiles.py  roles.py  services.py  shell.py  tasks.py  volumes.py  zones.py
automationclient/v1_1/: __init__.py  architectures.py  client.py  components.py  datastores.py  devices.py  nodes.py  profiles.py  properties.py  roles.py  services.py  shell.py  tasks.py  zones.py
automationclient/v2/: __init__.py  client.py  shell.py
docs/: Makefile  make.bat
docs/source/: Architecture.rst  Command-line_tool.rst  Datastore.rst  Device.rst  Global_Properties.rst  Install.rst  Overview.rst  Profile.rst  Python_API.rst  Zone.rst  conf.py  index.rst
tools/: cinder.bash_completion  colorizer.py
(+46 files in other folders)
