[metadata]
name = python-automationclient
summary = Stackops Automation API Client Library
description-file =
    README.rst
author = Jorge Valderrama Romero
author-email = jorge.valderrama@stackops.com
home-page = http://www.stackops.com/
classifier =
    Development Status :: 2 - Pre-Alpha'
    Environment :: Console
    Environment :: Stackops
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    automationclient

[entry_points]
console_scripts =
    automation = automationclient.shell:main

[build_sphinx]
all_files = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html
